#6 add async service to process updates