@@ -1,7 +1,6 @@
 package com.community.bitcoinwallet.repository;
 
 import com.community.bitcoinwallet.model.WalletEntry;
-import com.community.bitcoinwallet.util.DateAndAmountUtils;
 import lombok.AccessLevel;
 import lombok.experimental.FieldDefaults;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -19,27 +18,6 @@ import static com.community.bitcoinwallet.repository.WalletRepositoryMappersCons
 @FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 public class H2WalletRepository {
 
-    private static final String COUNT_BALANCES = "select count(*) c from BALANCE";
-    private static final String SELECT_BALANCES_FOR_UPDATE = "select ts,bitcoins from BALANCE " +
-        "where (ts > :from) limit :limit";
-    private static final String SELECT_LAST_BALANCE = "select ts, bitcoins from BALANCE " +
-        "order by ts desc " +
-        "limit 1";
-    private static final String SELECT_FIRST_BALANCE = "select ts, bitcoins c from BALANCE " +
-        "order by ts " +
-        "limit 1";
-
-    private static final String UPDATE_BALANCE = "update BALANCE set bitcoins=:bitcoins where" +
-        " ts=:ts";
-
-    private static final String SELECT_NEXT_FROM_QUEUE = "select ts,bitcoins from BALANCE_UPDATE_QUEUE " +
-        "order by ts " +
-        "limit 1";
-    private static final String SELECT_ID_FROM_QUEUE = "select id from BALANCE_UPDATE_QUEUE " +
-        "order by ts " +
-        "limit 1";
-    private static final String DELETE_FROM_QUEUE = "delete from BALANCE_UPDATE_QUEUE where id=:id";
-
     NamedParameterJdbcTemplate jdbcTemplate;
 
     public H2WalletRepository(NamedParameterJdbcTemplate jdbcTemplate) {
@@ -48,10 +26,9 @@ public class H2WalletRepository {
 
     @Transactional
     public void addEntry(WalletEntry entry) {
-        Map<String, Object> values = Map.of("ts", entry.getDatetime().toEpochMilli(),
-            "bitcoins", entry.getAmount());
+        Map<String, Object> values = entryToMap(entry);
         jdbcTemplate.update(String.format(INSERT, WALLET), values);
-        jdbcTemplate.update(String.format(INSERT, BALANCE_QUEUE), values);
+        jdbcTemplate.update("merge into BALANCE_UPDATE_QUEUE(ts,bitcoins) values(:ts,:bitcoins)", values);
     }
 
     @Transactional
@@ -71,15 +48,13 @@ public class H2WalletRepository {
                 "to", toAtStart.toEpochMilli()), ROW_MAPPER_WITH_DATE);
     }
 
-    public WalletEntry getWalletSumBeforeFrom(Instant fromAtStart) {
+    public Optional<WalletEntry> getWalletSumBeforeFrom(Instant fromAtStart) {
         List<WalletEntry> ts = jdbcTemplate.query(
             "select SUM(bitcoins) as bitcoins from WALLET " +
                 "where ts < :ts " +
                 "group by 1",
             Map.of("ts", fromAtStart.toEpochMilli()), ROW_MAPPER_WITH_SUM);
-        return ts.stream().findFirst()
-            .map(w -> new WalletEntry(fromAtStart, w.getAmount()))
-            .orElse(new WalletEntry(fromAtStart, DateAndAmountUtils.toBigDecimal(0.0)));
+        return ts.stream().findFirst();
     }
 
     public List<WalletEntry> getBalancesWithinRange(Instant fromExclusive, Instant toInclusive) {
@@ -98,77 +73,36 @@ public class H2WalletRepository {
             .stream().findFirst();
     }
 
-    @Transactional
-    private void updateBalancesFromQueue() {
-        List<WalletEntry> res = jdbcTemplate.query(SELECT_NEXT_FROM_QUEUE,
-            Collections.emptyMap(), ROW_MAPPER);
-        if (!res.isEmpty()) {
-            incrementBalancesFromEntry(res.get(0));
-            Long id = jdbcTemplate.queryForObject(SELECT_ID_FROM_QUEUE, Collections.emptyMap(),
-                (rs, rowNum) -> rs.getLong("id"));
-            jdbcTemplate.update(DELETE_FROM_QUEUE, Map.of("id", id));
-        }
-    }
-
     /**
-     * Not really thread-safe by itself, but can be, if there is a strict transaction policy in DB.
-     * Currently is either called with blocking or used by single thread executor,
-     * so should by fine.
+     * Should happen inside the transaction, otherwise we can lose some updates.
      */
-    private void incrementBalancesFromEntry(WalletEntry walletEntry) {
-        Instant atEndOfHour = DateAndAmountUtils.atEndOfHour(walletEntry.getDatetime());
-        if (balanceTableIsEmpty()) {
-            insertBalance(new WalletEntry(atEndOfHour, walletEntry.getAmount()));
-            return;
-        }
-
-        List<WalletEntry> currentBalances = selectNextBatchOfBalances(walletEntry.getDatetime());
-        while (!currentBalances.isEmpty()) {
-            currentBalances.forEach(b -> b.setAmount(b.getAmount().add(walletEntry.getAmount())));
-            updateBalances(currentBalances);
-            currentBalances = selectNextBatchOfBalances(currentBalances.get(currentBalances.size() - 1).getDatetime());
-        }
-
-        WalletEntry firstEntry = getFirstEntry();
-        if (firstEntry.getDatetime().isAfter(atEndOfHour)) {
-            insertBalance(new WalletEntry(atEndOfHour, walletEntry.getAmount()));
-        }
-        WalletEntry lastEntry = getLastEntry();
-        if (lastEntry.getDatetime().isBefore(atEndOfHour)) {
-            insertBalance(new WalletEntry(atEndOfHour, walletEntry.getAmount().add(lastEntry.getAmount())));
-        }
+    @Transactional
+    public Optional<WalletEntry> getFirstEventAndClearQueue() {
+        Optional<WalletEntry> first = jdbcTemplate.query("select ts,bitcoins from BALANCE_UPDATE_QUEUE " +
+                "order by ts " +
+                "limit 1",
+            Collections.emptyMap(), ROW_MAPPER).stream().findFirst();
+        jdbcTemplate.update(String.format(CLEAR, BALANCE_QUEUE), Collections.emptyMap());
+        return first;
     }
 
-    private boolean balanceTableIsEmpty() {
-        return jdbcTemplate.queryForObject(COUNT_BALANCES, Collections.emptyMap(),
-            (rs, row) -> rs.getInt("c") == 0);
-    }
-
-    private WalletEntry getFirstEntry() {
-        return jdbcTemplate.queryForObject(SELECT_FIRST_BALANCE, Collections.emptyMap(), ROW_MAPPER);
-    }
-
-    private WalletEntry getLastEntry() {
-        return jdbcTemplate.queryForObject(SELECT_LAST_BALANCE, Collections.emptyMap(), ROW_MAPPER);
-    }
-
-    private List<WalletEntry> selectNextBatchOfBalances(Instant ts) {
-        return jdbcTemplate.query(SELECT_BALANCES_FOR_UPDATE,
-            Map.of("from", ts.toEpochMilli(), "limit", 0), ROW_MAPPER);
-    }
-
-    private void updateBalances(List<WalletEntry> balancesToUpdate) {
+    @Transactional
+    public void mergeIntoBalances(List<WalletEntry> balancesToUpdate) {
         for (WalletEntry entry : balancesToUpdate) {
-            Map<String, ? extends Number> values = Map.of("ts", entry.getDatetime().toEpochMilli(),
-                "bitcoins", entry.getAmount());
-            jdbcTemplate.update(UPDATE_BALANCE, values);
+            jdbcTemplate.update("merge into BALANCE(ts,bitcoins) values(:ts,:bitcoins)", entryToMap(entry));
         }
     }
 
-    private void insertBalance(WalletEntry entry) {
-        Map<String, ? extends Number> values = Map.of("ts", entry.getDatetime().toEpochMilli(),
+    public Optional<Instant> getLastBalanceTs() {
+        return jdbcTemplate.query("select MAX(ts) ts_max from BALANCE " +
+            "group by 1", Collections.emptyMap(), (rs, rowNum) -> Instant.ofEpochMilli(rs.getLong("ts_max")))
+            .stream().findFirst();
+    }
+
+
+    private Map<String, Object> entryToMap(WalletEntry entry) {
+        return Map.of("ts", entry.getDatetime().toEpochMilli(),
             "bitcoins", entry.getAmount());
-        jdbcTemplate.update(String.format(INSERT, BALANCE), values);
     }
 
 }
